# legal-ai-rag

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  railway.toml  requirements.txt
app/models/: schemas.py
app/routers/: chat.py  debug.py  search.py
app/services/: chat.py  embeddings.py  rag.py  search.py  vector_store.py
app/utils/: logger.py  railway_logger.py
data/: sample_legal_texts.json
docs/: chat-api-usage.md  deployment-options.md  frontend-api-integration.md  railway-deployment-best-practices-2024.md  railway-deployment-success-report.md  railway-poetry-deployment-troubleshooting.md  railway_logging.md
scripts/: ingest_data.py  railway_logs.py  test_api_connection.html  test_debug_endpoint.py
tests/: README.md  test_chat_api.py  test_runner.py
tests/test_data/: chat_test_cases.json
