[tool.poetry]
name = "legal-ai-rag"
version = "0.1.0"
description = "Legal AI RAG System API"
authors = ["Your Name <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
pydantic = "2.7.4"
pydantic-settings = "2.3.4"
python-multipart = "0.0.9"
python-dotenv = "1.0.1"
openai = "1.12.0"
httpx = "0.28.0"
chromadb = "0.4.24"
numpy = "1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.28.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
